--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,13 @@
         "test": "phpunit --color=always",
         "analyze": "phpstan analyze ./src"
     },
+    "require": {
+        "php": "^7.4 || ^8.0",
+        "symfony/stopwatch": "^5.2",
+        "illuminate/collections": "^8.18",
+        "symfony/finder": "^5.2",
+        "nesbot/carbon": "^2.43"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^5.2",
@@ -21,16 +28,5 @@
             "UnitTest\\": "tests/unit/",
             "TestHelper\\": "tests/helper/"
         }
-    },
-    "config": {
-        "platform": {
-            "php": "^7.4"
-        }
-    },
-    "require": {
-        "symfony/stopwatch": "^5.2",
-        "illuminate/collections": "^8.18",
-        "symfony/finder": "^5.2",
-        "nesbot/carbon": "^2.43"
     }
 }
